src/layouts/index.css
/* ... */
.count_down_area {
  position: relative;
  height: 70vh;
  overflow: hidden;
}
.overlay {
  position: absolute;
  top: 0;
  left: 0;
  clear: float;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.2);
}
#feature1_overlay {
  background-color: rgba(181, 29, 41, 0.7);
}
#feature2_overlay {
  background-color: rgba(32, 51, 171, 0.7);
}
#feature3_overlay {
  background-color: rgba(156, 132, 0, 0.7);
}

.single_counter1{
    background: rgba(240, 30, 74, 0.85);
    position: relative;
    width: 233px;
    height: 175px;
    margin: auto;
}
.single_counter1::before{
position: absolute;
    content: "";
    background: #fff;
    height: 15px;
    width: 15px;
    right: -38px;
    top: 65px;
    border-radius: 50%;
}
.single_counter1:last-child::before{

}
.single_counter1:last-child::after{

}
.single_counter1::after{
    position: absolute;
    content: "";
    background: #fff;
    height: 15px;
    width: 15px;
    right: -38px;
    top: 99px;
    border-radius: 50%;
}
.single_counter_inner{}
.single_counter_content{
	text-align: center;
}
.single_counter_content h2{
    font-size: 50px;
    font-weight: 500;
    color: #fff;
    padding-top: 34px;
}
.single_counter_content p{
	font-size: 20px;
    font-weight: 500;
    color: #fff;
    margin-top: 7px;
}
/* count down bnt */
.counter_bnt {
    text-align: center;
    margin-top: 5px;
    overflow: hidden;
    transition: .5s;
}
.counter_bnt a{
    font-size: 14px;
    font-weight: 500;
    background: none;
    color: #fff;
    height: 52px;
    width: 52px;
    line-height: 60px;
    padding: 10px 36px;
    border-radius: 30px;
    border: 1px solid white;
    transition: 1s;
    z-index: 111;
    font-family: 'Montserrat', sans-serif;
    text-transform: uppercase;
}

.counter_bnt a:hover{
	  color: #B51D29;
    background: #fff;
	  border-color:#fff;
}
/* single service 1*/
.service_area {
	padding: 80px 0;
}
.service_section {
    margin-top: 38px;
}
.single_service1 {}

.single_service_inner1{
    text-align: right;
    margin-bottom: 58px;
    margin-top: 15px;

}
.single_service_content p {
  height: 50px;
}
.single_service_content1{
    margin-right: 100px;
    margin-top: -68px;
}
.single_service_content1 h2{
    font-size: 18px;
    font-weight: 600;
    color: #333;
    margin-top: 0;
    margin-bottom: 10px;
}

.single_service_content h2:hover{
	color:#B51D29;
}
.single_service_content1 h2:hover{
	color:#B51D29;
}
.service_play_icon{}
.service_play_icon i {
	position: absolute;
	top: 50%;
	left: 50%;
	z-index: 999;
	color: #fff;
	text-align: center;
	font-size: 30px;
	transform: translateX(-50%) translateY(-50%);
}
.single_service_thumb{
	position:relative;
}
.single_service_thumb::before{
	background: rgba(0, 0, 0, 0.5) none repeat scroll 0 0;
    bottom: 0;
    content: "";
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
}
.single_service_thumb img{
	width: 100%;
}

.single_service_content1 p{
    font-size: 14px;
    font-weight: 400;
    color: #333;
}
.single_service_content1 a{

}
.service_icon {}
.service_icon i{
 color:#333;
 background:fff;
}
.service_icon span i{
    width: 68px;
    display: inline-block;
    height: 68px;
    line-height: 68px;
    box-shadow: 0px 0px 30px 0px rgba(148,146,245,0.2);
    text-align: center;
    font-size: 25px;
    border-radius: 50%;
    -webkit-transition: all 0.5s ease 0s;
    transition: all 0.5s ease 0s;
}

.single_service1:hover .service_icon i{
	color:#fff;
	background:#B51D29;
}

.single_service:hover .service_icon_1 i{
	color:#fff;
	background:#B51D29;
}
/* single service2 */
.single_service {


}

.single_service_inner{
    margin-bottom: 58px;
    margin-top: 15px;

}
.single_service_content{
     margin-left: 100px;
    margin-top: -68px;
}
.single_service_content h2{
    font-size: 18px;
    font-weight: 600;
    color: #333;
    margin-top: 0;
    margin-bottom: 10px;
}


.single_service_content p{

}
.single_service_content a{

}
.service_icon_1 {}
.service_icon_1 i{
    color:#333;
    background:fff;
}
.service_icon_1 span i{
	width: 68px;
    display: inline-block;
    height: 68px;
    line-height: 68px;
    box-shadow: 0px 0px 30px 0px rgba(148,146,245,0.2);
    text-align: center;
    font-size: 25px;
    border-radius: 50%;
    -webkit-transition: all 0.5s ease 0s;
    transition: all 0.5s ease 0s;
}

/* portfolio area */

.portfolio_area {
    padding: 0px 0 82px;
}
.portfolio_area2 {
	padding: 82px 0 98px;
}
.portfolio_area3 {
	padding: 82px 0 100px;
}
.portfolio_area4 {
	padding: 100px 0 100px;
}
.section-title.t_center.port p {
    width: 63%;
    margin: auto;
    margin-bottom: 49px;
}
.portfolio_menu{
    text-align: center;
    margin: 0px 0 40px;
}
.portfolio_menu ul{}
.portfolio_menu ul li{
	border: 1px solid #f3eaea;
    border-radius: 30px;
    color: #333;
    cursor: pointer;
    display: inline-block;
    font-size: 13px;
    font-weight: 500;
    margin: 0 5px 10px;
    padding: 6px 27px;
    position: relative;
    text-transform: uppercase;
    -webkit-transition: all 0.3s ease 0s;
    transition: all 0.3s ease 0s;
}

.portfolio_menu ul li:hover,
.portfolio_menu ul li.current_menu_item{
    color: #fff;
    background: #B51D29 none repeat scroll 0 0;
    border-color: #B51D29;
}
/* single portfolio css */
.row.li .col-md-4{
	padding:0;
}

.single_portfolio{
	overflow:hidden;
}
.single_portfolio_inner {
    position: relative;
    z-index: 1;
}
.single_portfolio_thumb {
    position: relative;
    z-index: -1;
}
.single_portfolio_thumb::before {
    position: absolute;
    content: "";
    background:none;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
	transition: .5s;
	transform:scale(1);
}
.single_portfolio:hover .single_portfolio_thumb::before {
    background: rgba(235, 27, 43, 0.7);
    transform: scale(1.2);
    z-index: 1;
}

.single_portfolio_thumb .img{
	width:100%;
	transform:scale(1);
	transition: .5s;
}
.single_portfolio:hover .single_portfolio_thumb .img{
    transform:scale(1.2);
}
/* ... */

